# axum-tracker

./: Cargo.toml  Readme.md  justfile
src/: assets.rs  main.rs
